force-app/main/default/objects/AutoSelectEmailTemplateFolder__mdt/AutoSelectEmailTemplateFolder__mdt.object-meta.xml
<CustomObject>
    <label>AutoSelectEmailTemplateFolder</label>
    <pluralLabel>AutoSelectEmailTemplateFolders</pluralLabel>
</CustomObject>