force-app/main/default/objects/AutoSelectEmailTemplateFolder__mdt/fields/Default_Folder__c.field-meta.xml
<CustomField>
    <fullName>Default_Folder__c</fullName>
    <label>Default Folder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>