force-app/main/default/objects/AutoSelectEmailTemplateFolder__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyIPM__Trademark_New__c</fullName>
                <default>true</default>
                <label>SymphonyIPM__Trademark_New__c</label>
            </value>
            <value>
                <fullName>SymphonyIPM__Patent__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Dispute_Opposition__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPM__Law_Firm__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPM__Invention_Disclosure_New__c</fullName>
            </value>
            <value>
                <fullName>Collection__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Trademark_Search__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Proposed_Mark__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__TM_Search_Instruction__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Mark__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPMExt__Copyright__c</fullName>
            </value>
            <value>
                <fullName>SymphonyIPM__Collection__c</fullName>
            </value>
            <value>
                <fullName>Search_Instruction__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>