force-app/main/default/objects/AutoSelectEmailTemplateFolder__mdt/fields/Template_folders__c.field-meta.xml
<CustomField>
    <fullName>Template_folders__c</fullName>
    <description>Template folders to be visible based on object, with comma separated folder API name and enclosed within inverted  comma&apos;s</description>
    <label>Template folders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>